bug fix: issue #589 (added visibility to tansition)
Issue #589

--- a/scss/bootscore/_top_button.scss
+++ b/scss/bootscore/_top_button.scss
@@ -6,9 +6,12 @@ To top button
   right: 5%;
   bottom: 30px;
   opacity: 0;
-  transition: opacity 1s;
+  visibility: hidden;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 
   &.visible {
     opacity: 1;
+    visibility: visible;
+    transition: visibility 0s linear 0s, opacity 300ms;
   }
 }
